--- a/back_end/requirements.txt
+++ b/back_end/requirements.txt
@@ -1,8 +1,10 @@
-crewai
-crewai_tools
-langchain_community
-langchain_groq
-pydantic
-fastapi
-requests
-resend
+crewai==0.28.8
+crewai-tools==0.4.6
+langchain==0.1.17
+langchain-community==0.0.36
+langchain-core==0.1.50
+langchain-groq==0.1.5
+pydantic==2.7.2
+fastapi==0.110.3
+requests==2.31.0
+resend==2.4.0
