--- a/back_end/requirements.txt
+++ b/back_end/requirements.txt
@@ -3,6 +3,7 @@ crewai-tools==0.4.6
 langchain==0.1.17
 langchain-community==0.0.36
 langchain-core==0.1.50
+langchain-openai==0.1.7
 langchain-groq==0.1.5
 pydantic==2.7.2
 fastapi==0.110.3
